# pyexif

./: .gitignore  .pylintrc  MANIFEST  PKG-INFO  README  REQUIRES  pyexif.py  pyproject.toml  setup.py
pyexif/: __init__.py  pyexif.py
pyexif.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyexif/.ipynb_checkpoints/: __init__-checkpoint.py
tests/: conftest.py  test_pyexif.py
